--- a/web/src/app/features/home/components/news-center/news-center.component.html
+++ b/web/src/app/features/home/components/news-center/news-center.component.html
@@ -7,7 +7,7 @@
                 <p><span><strong>{{item.date | date:'dd MMM yyyy'}}</strong></span></p>
                 <h6><strong>{{item.title | uppercase}}</strong></h6>
                 <p>{{item.description}}</p>
-                <div class="d-flex align-items-center">
+                <div class="d-flex align-items-center flex-wrap">
                     <a href="{{data.url}}" *ngFor="let data of item.lists; let i=index;">
                         <button [ngClass]="'btn-' + i">{{data.list_title}}</button>
                     </a>
