--- a/web/src/app/features/home/home.component.html
+++ b/web/src/app/features/home/home.component.html
@@ -9,3 +9,7 @@
     <app-news-center></app-news-center>
     <app-testimonial></app-testimonial>
 </div>
+
+<div class="popup-container" *ngIf="showPopup">
+    <app-home-dialog></app-home-dialog>
+</div>
