--- a/web/src/app/common/header/header.component.scss
+++ b/web/src/app/common/header/header.component.scss
@@ -1,5 +1,5 @@
 header {
-    padding-right: 35px;
+    padding-right: 25px;
 
 }
 
@@ -18,7 +18,7 @@ ul {
 }
 
 li {
-    padding: 28px 16px;
+    padding: 28px 9px;
     font-weight: 500;
     cursor: pointer;
     font-size: 14px;
@@ -128,20 +128,39 @@ button:hover {
     border: var(--ts-accent-color1);
 }
 
+.close-btn {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px 20px;
+
+    img {
+        width: 20px;
+        cursor: pointer;
+    }
+}
+
 @media (max-width: 991px) {
+    header {
+        padding-right: 20px;
+    }
+
     .main-nav {
         display: none;
+        align-items: normal;
     }
 
     .res {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 5px 0;
 
         .logo {
-            height: 50px;
+            height: 60px;
         }
+    }
+
+    .web-logo {
+        height: 60px;
     }
 
     .menu {
@@ -152,5 +171,59 @@ button:hover {
         img {
             width: 20px;
         }
+    }
+
+    .first-nav {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    .main-nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: white;
+        flex-direction: column;
+        z-index: 999;
+        display: none;
+        justify-content: flex-start;
+
+        &.open {
+            display: flex;
+        }
+
+        ul {
+            flex-direction: column;
+            width: 100%;
+            height: 90vh;
+            overflow-y: auto;
+        }
+
+        li {
+            width: 100%;
+            padding: 12px 16px;
+        }
+
+        .dropdown {
+            position: relative;
+            top: 0;
+            box-shadow: none;
+            border: none;
+            background-color: transparent;
+            height: 300px;
+            overflow-y: auto;
+            padding: 10px 0;
+        }
+
+        .dropdown-container {
+            padding: 0;
+            flex-direction: column;
+        }
+    }
+    li a{
+        max-width: auto;
     }
 }
