--- a/web/src/app/features/home/components/dealership/dealership.component.html
+++ b/web/src/app/features/home/components/dealership/dealership.component.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <h2 class="text-center mb-4">Registration and Dealership</h2>
-            <div class="col-xl-3 col-lg-3 col-sm-12 col-md-6" *ngFor="let item of dealershipData">
+            <div class="col-xl-3 col-lg-3 col-sm-12 col-md-6 my-2" *ngFor="let item of dealershipData">
                 <div class="content" >
                     <h4>{{item.title | uppercase}}</h4>
                     <img class="img-fluid mb-3" [src]="item.imageUrl" alt="">
