--- a/web/src/app/features/home/components/dealership/dealership.component.scss
+++ b/web/src/app/features/home/components/dealership/dealership.component.scss
@@ -8,6 +8,9 @@
     text-align: center;
     padding: 20px 10px;
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 h2 {
@@ -22,7 +25,7 @@ h2 {
 h4 {
     font-weight: 700;
     font-size: 20px;
-    min-height: 90px;
+    min-height: 60px;
 }
 
 button {
@@ -47,5 +50,8 @@ button:hover {
 
     .dealer-container {
         padding-top: 40px;
+    }
+    h4{
+        min-height: auto;
     }
 }
