--- a/web/src/app/features/shared/components/home-dialog/home-dialog.component.scss
+++ b/web/src/app/features/shared/components/home-dialog/home-dialog.component.scss
@@ -1,23 +1,56 @@
 .popup {
     position: fixed;
-    top: 25%;
+    top: 32%;
     border-radius: 10px;
     right: 52px;
     background-color: #f9f9f9;
     border: 1px solid #000;
-    padding: 10px;
+    padding: 0 15px 15px;
     z-index: 9999;
     transition: opacity 0.3s ease-in-out;
+    min-height: 160px;
+    min-width: 240px;
 }
 
 .popup .close {
     color: #aaa;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
 }
 
-// p:last-child:after {
-//     clear: both;
-//     content: "";
-//     display: block;
-// }
+.popup::after {
+    background: inherit;
+    border-radius: 6px;
+    display: block;
+    content: "";
+    height: 70px;
+    position: absolute;
+    right: -82px;
+    top: -3px;
+    transform-origin: top left;
+    transform: rotate(46deg);
+    width: 90px;
+    z-index: -5;
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
+}
+
+.inpopup {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.faq-item .answer {
+    font-size: 16px;
+    color: #666;
+}
+h5{
+    font-size: 17px;
+}
+
+@media (max-width: 600px){
+    .popup{
+        display: none !important;
+    }
+}
