--- a/web/src/app/common/header/header.component.html
+++ b/web/src/app/common/header/header.component.html
@@ -133,7 +133,7 @@
 
                 </li>
                 <li class="navbar">
-                    <a routerLinkActive="active" routerLink="">News Center</a>
+                    <a routerLinkActive="active" routerLink="" (click)="goToNewsCenter()">News Center</a>
                 </li>
             </ul>
         </div>
