--- a/web/src/app/features/home/home.component.html
+++ b/web/src/app/features/home/home.component.html
@@ -6,7 +6,7 @@
     <app-dealership></app-dealership>
     <app-faqs></app-faqs>
     <app-gallery></app-gallery>
-    <app-news-center></app-news-center>
+    <app-news-center id="news-center"></app-news-center>
     <app-testimonial></app-testimonial>
 </div>
 
