--- a/web/src/app/common/header/header.component.scss
+++ b/web/src/app/common/header/header.component.scss
@@ -53,7 +53,7 @@ li:hover .chevron-img {
 }
 
 .dropdown {
-    display: none;
+    // display: none;
     position: fixed;
     top: 78px;
     left: 0;
@@ -78,6 +78,8 @@ li:hover .chevron-img {
 
 .dropdown-item {
     white-space: normal;
+    display: flex;
+    justify-content: center;
 }
 
 .dropdown a {
