--- a/web/src/app/common/header/header.component.scss
+++ b/web/src/app/common/header/header.component.scss
@@ -1,35 +1,35 @@
 header {
-    padding-right: 25px;
-
+    padding-right: 35px;
+ 
 }
-
+ 
 .main-nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
 }
-
+ 
 ul {
     display: flex;
     margin-bottom: 0;
     list-style: none;
     padding: 0;
 }
-
+ 
 li {
-    padding: 28px 9px;
+    padding: 28px 16px;
     font-weight: 500;
     cursor: pointer;
     font-size: 14px;
     text-transform: uppercase;
 }
-
+ 
 li:hover .dropdown-trigger {
     background-color: var(--ts-primary-color);
     color: var(--ts-accent-color1);
 }
-
+ 
 li a {
     text-decoration: none;
     color: var(--ts-accent-color2);
@@ -37,25 +37,25 @@ li a {
     font-weight: 600;
     max-width: 280px;
 }
-
+ 
 li a:hover {
     background-color: var(--ts-primary-color);
     color: var(--ts-accent-color1) !important;
 }
-
+ 
 li:hover .chevron-img {
     transform: rotate(180deg);
 }
-
+ 
 .chevron-img {
     height: 10px;
     transition: transform .3 ease-in-out;
 }
-
+ 
 .dropdown {
     display: none;
     position: fixed;
-    top: 78px;
+    top: 80px;
     left: 0;
     right: 0;
     border-top: 1px solid rgba(60, 100, 168, 0.9);
@@ -64,22 +64,22 @@ li:hover .chevron-img {
     padding: 15px 0;
     z-index: 10;
 }
-
+ 
 .dropdown-container {
     padding: 0 50px;
     display: flex;
     justify-content: center;
-
+ 
     p {
         font-size: 14px;
         text-transform: none;
     }
 }
-
+ 
 .dropdown-item {
     white-space: normal;
 }
-
+ 
 .dropdown a {
     display: block;
     text-decoration: none;
@@ -88,32 +88,32 @@ li:hover .chevron-img {
     background-color: transparent;
     transition: color 0.3s ease;
 }
-
+ 
 .dropdown a:hover {
     color: var(--erm-secondary-color-shade2);
 }
-
+ 
 li:hover .dropdown {
     display: block;
 }
-
+ 
 .social-icons img {
     cursor: pointer;
 }
-
-
+ 
+ 
 .menu {
     display: none;
 }
-
+ 
 .res {
     display: none;
 }
-
+ 
 .web-logo {
-    height: 80px;
+    height: 100px;
 }
-
+ 
 button {
     background: none;
     border: 1.5px solid var(--ts-accent-color2);
@@ -121,109 +121,47 @@ button {
     padding: 6px 22px;
     font-weight: 600;
 }
-
+ 
 button:hover {
     color: var(--ts-accent-color1);
     background-color: #E7342F;
     border: var(--ts-accent-color1);
 }
-
-.close-btn {
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px 20px;
-
-    img {
-        width: 20px;
-        cursor: pointer;
-    }
-}
-
+ 
 @media (max-width: 1199px) {
-    header {
-        padding-right: 20px;
-    }
-
     .main-nav {
         display: none;
-        align-items: normal;
     }
-
+ 
     .res {
         display: flex;
         justify-content: space-between;
         align-items: center;
-
+        padding: 5px 0;
+ 
         .logo {
-            height: 60px;
+            height: 50px;
         }
     }
-
-    .web-logo {
-        height: 60px;
-    }
-
+ 
     .menu {
         display: flex;
         justify-content: center;
         align-items: center;
-
+ 
         img {
             width: 20px;
         }
     }
+}
 
-    .first-nav {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 15px;
-    }
 
-    .main-nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: white;
-        flex-direction: column;
-        z-index: 999;
-        display: none;
-        justify-content: flex-start;
-
-        &.open {
-            display: flex;
-        }
-
-        ul {
-            flex-direction: column;
-            width: 100%;
-            height: 90vh;
-            overflow-y: auto;
-        }
-
-        li {
-            width: 100%;
-            padding: 12px 16px;
-        }
-
-        .dropdown {
-            position: relative;
-            top: 0;
-            box-shadow: none;
-            border: none;
-            background-color: transparent;
-            height: 300px;
-            overflow-y: auto;
-            padding: 10px 0;
-        }
-
-        .dropdown-container {
-            padding: 0;
-            flex-direction: column;
-        }
-    }
-    li a{
-        max-width: auto;
+@media (min-width: 1199px) and (max-width: 1300px){
+    li {
+        padding: 28px 8px;
+        font-weight: 500;
+        cursor: pointer;
+        font-size: 14px;
+        text-transform: uppercase;
     }
 }
