--- a/web/src/app/features/buy/components/buy-form/buy-form.component.scss
+++ b/web/src/app/features/buy/components/buy-form/buy-form.component.scss
@@ -48,3 +48,9 @@ h4{
     font-weight: 600;
     letter-spacing: .3px;
 }
+
+@media (max-width: 767px){
+    .content{
+        overflow-x: auto;
+    }
+}
